kubernetes/apps/observability/prometheus-remote-write/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-remote-write
spec:
  hostnames:
    - prometheus-rw.erwanleboucher.dev
  parentRefs:
    - name: kgateway-external
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/write
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
